@@ -1,0 +1,4 @@
+Software testing is important, but, in part because it is frustrating
+and boring, many of us avoid it. 'testthat' is a testing framework for
+R that is easy to learn and use, and integrates with your existing
+'workflow'.
