@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2019,v 1.3355 2019/08/09 18:38:11 brook Exp $
+$NetBSD: CHANGES-2019,v 1.3356 2019/08/09 18:39:06 brook Exp $
 
 Changes to the packages collection and infrastructure in 2019:
 
@@ -5478,3 +5478,4 @@ Changes to the packages collection and infrastructure in 2019:
 	Added sysutils/R-sys version 3.2 [brook 2019-08-09]
 	Added devel/R-git2r version 0.26.1 [brook 2019-08-09]
 	Added sysutils/R-ps version 1.3.0 [brook 2019-08-09]
+	Added devel/R-testthat version 2.2.1 [brook 2019-08-09]
